avance en post-page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <section class="section-users">
 <div fxFlex="1 0 auto" class="content-container">
   <router-outlet></router-outlet>
+  <!-- <app-posts></app-posts> -->
 </div>
 </section>
 <footer></footer>
