--- a/src/app/home/pages/post-page/post.page.html
+++ b/src/app/home/pages/post-page/post.page.html
@@ -1,7 +1,19 @@
-<mat-list>
-  <h3 mat-subheader class="title" fxLayoutAlign="center center">Users</h3>
-  <mat-list-item *ngFor="let post of Post$ | async">
-    <i class="material-icons md-36">face</i>
-    <h4>{{post.name}}</h4>
-  </mat-list-item>
+<mat-list class="list-group" fxLayout="column" >
+  <div fxFlex="10%">
+      <h3 mat-subheader class="title" fxLayoutAlign="center center">Users</h3>
+  </div>
+    <div class="item" >
+        <mat-list-item  *ngIf=" User$ | async as user">
+            <i class="material-icons md-36">face</i>
+            <h4  >{{user.name}}</h4>
+          </mat-list-item>
+    </div>
 </mat-list>
+
+<mat-list>
+    <h3 mat-subheader class="title" fxLayoutAlign="center center">post</h3>
+    <mat-list-item *ngFor="let post of Post$ | async">
+      <!-- <i class="material-icons md-36">face</i> -->
+      <h4>{{post.title}}</h4>
+    </mat-list-item>
+  </mat-list>
