funcionalidad de users-posts

--- a/src/app/home/pages/post-page/post.page.html
+++ b/src/app/home/pages/post-page/post.page.html
@@ -5,7 +5,8 @@
     <div class="item" >
         <mat-list-item  *ngIf=" User$ | async as user">
             <i class="material-icons md-36">face</i>
-            <h4  >{{user.name}}</h4>
+            <h4>{{user.id}}</h4>
+            <h4>{{user.email}}</h4>
           </mat-list-item>
     </div>
 </mat-list>
@@ -13,7 +14,9 @@
 <mat-list>
     <h3 mat-subheader class="title" fxLayoutAlign="center center">post</h3>
     <mat-list-item *ngFor="let post of Post$ | async">
-      <!-- <i class="material-icons md-36">face</i> -->
+      <h4>{{post.id }}</h4>
+      <br>
       <h4>{{post.title}}</h4>
     </mat-list-item>
+    <br>
   </mat-list>
