--- a/src/app/home/pages/landing/landing.page.scss
+++ b/src/app/home/pages/landing/landing.page.scss
@@ -1,13 +1,35 @@
-// .list-group{
-//     background-color: bisque;
+@import "../../../../variables.scss";
+.title {
+  font-family: 'Great Vibes';
+  font-size: 3.2rem;
+  color: $app-warn;
+}
+.card {
+  margin: 12px;
+  .info {
+    margin: 10px;
+    height: 250px;
+    width: 280px;
+    padding: 40px;
+    background-color: rgb(248, 237, 248);
 
-//   .title{
-//     width: 100%;
-//     background-color: rgb(212, 177, 212);
-//    }
-//    .item{
-//        width: 50%;
-//        background-color: aquamarine;
-//    }
-// .material-icons.md-36 { font-size: 36px; }
-// }
+    img {
+      width: 150px;
+      height: 150px;
+      border-radius: 800px;
+    }
+
+    .sub-title {
+      font-size: 1rem;
+      color: black;
+      font-weight: bold;
+      text-align: center;
+      font-family: "New Century Schoolbook"
+
+    }
+  }
+}
+
+img:hover {
+  cursor: pointer;
+}
