--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,5 @@ html, body{
     margin: 0;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
-    background-color:  rgb(185, 184, 184);
+    background-color:  white;
 }
